fix typo VItk -> IVtk
darcs-hash:20050610104108-2fc9d-e84927007fa217f6424ed2fecb50d3e9d8f942ff.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -859,4 +859,4 @@ SET(WRAP_SOURCES
   wrap_itkVTKImageToImageFilter
 )
 
-ITK_WRAP_LIBRARY("${WRAP_SOURCES}" VItk "" "" "" "")
+ITK_WRAP_LIBRARY("${WRAP_SOURCES}" IVtk "" "" "" "")
