--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -634,7 +634,7 @@ MACRO(ITK_WRAP_LIBRARY WRAP_SOURCES LIBRARY_NAME DIRECTORY DEPEND_LIBRARY EXTRA_
     ${WRAP_JAVA_SOURCES} GENERATED )
   SET(EXTRA_LIBS ${ITK_LINK_LIBRARIES})
   IF("${ITK_LINK_LIBRARIES}" MATCHES "^$")
-    SET(EXTRA_LIBS ${LIBRARY_NAME})
+    # SET(EXTRA_LIBS ${LIBRARY_NAME})
   ENDIF("${ITK_LINK_LIBRARIES}" MATCHES "^$")
   IF(ITK_CSWIG_TCL)
     IF(ITK_SWIG_FILE)
