add missing file
darcs-hash:20050801112241-2fc9d-65d065251d92dbf5aaaaef3c2b532ce97f2497b0.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -856,7 +856,7 @@ ENDMACRO(ITK_WRAP_LIBRARY)
 
 SET(WRAP_SOURCES
   wrap_itkImageToVTKImageFilter
-  wrap_itkVTKImageToImageFilter
+#  wrap_itkVTKImageToImageFilter
 )
 
 ITK_WRAP_LIBRARY("${WRAP_SOURCES}" itkvtk "" "" "" "")
