also install sources
darcs-hash:20051013113003-2fc9d-fcc02457f3a5d65fae7a2d5dccce4118ce298467.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,4 +50,7 @@ IF(WRAP_PYTHON OR WRAP_TCL OR WRAP_JAVA)
 ENDIF(WRAP_PYTHON OR WRAP_TCL OR WRAP_JAVA)
 
 #-----------------------------------------------------------------------------
-
+INSTALL_FILES(/include/InsightToolkit/BasicFilters FILES ${itkvtk_SOURCE_DIR}/src/itkImageToVTKImageFilter.h)
+INSTALL_FILES(/include/InsightToolkit/BasicFilters FILES ${itkvtk_SOURCE_DIR}/src/itkImageToVTKImageFilter.txx)
+INSTALL_FILES(/include/InsightToolkit/BasicFilters FILES ${itkvtk_SOURCE_DIR}/src/itkVTKImageToImageFilter.h)
+INSTALL_FILES(/include/InsightToolkit/BasicFilters FILES ${itkvtk_SOURCE_DIR}/src/itkVTKImageToImageFilter.txx)
