install python files at the right place
darcs-hash:20051014090531-2fc9d-03d0c52ad92a782e3def0b6751a6eff17877ef82.gz

--- a/Wrapping/CMakeLists.txt
+++ b/Wrapping/CMakeLists.txt
@@ -21,8 +21,8 @@ SET(ITK_CSWIG_PYTHON ${WRAP_PYTHON})
 IF(ITK_CSWIG_PYTHON)
   FIND_PACKAGE(PythonLibs)
   INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
-  INSTALL_FILES(/lib/InsightToolkit FILES "${itkvtk_BINARY_DIR}/Wrapping/${MODULE_NAME}Py.py")
-  INSTALL_FILES(/lib/InsightToolkit FILES "${itkvtk_BINARY_DIR}/Wrapping/${MODULE_NAME}.py")
+  INSTALL_FILES(/lib/InsightToolkit/python FILES "${itkvtk_BINARY_DIR}/Wrapping/${MODULE_NAME}Py.py")
+  INSTALL_FILES(/lib/InsightToolkit/python FILES "${itkvtk_BINARY_DIR}/Wrapping/${MODULE_NAME}.py")
   INSTALL_FILES(/lib/InsightToolkit FILES "${itkvtk_BINARY_DIR}/bin/ITK${MODULE_NAME}Python.py")
   INSTALL_FILES(/lib/InsightToolkit/python FILES "${itkvtk_SOURCE_DIR}/Wrapping/Python/${ITK_LIBRARY_LANG}.py")
 ENDIF(ITK_CSWIG_PYTHON)
